# animorphs

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/bags/: CMakeLists.txt  bags.cpp  softmats.json
examples/huddling/: CMakeLists.txt  huddling.cpp
examples/softcollision/: CMakeLists.txt  colliding.cpp  softcollision.json
examples/standalone/: CMakeLists.txt  animorphs.json  softmats.json  standalone.cpp
shaders/osx/: animorphs.fsh  animorphs.vsh  softmats.fsh  softmats.vsh
src/: softmatsim.cpp  softmatsim.h
src/collisions/: box.h  collision.cpp  collision.h  collisionconstr.h  collisiondstruct.h  collisiontest.h  contact.h  contactlist.h
src/core/: animat.cpp  animat.h  animatsource.cpp  animatsource.h  body.cpp  bodyset.cpp  bodyset.h  edge.h  face.h  pbdim.cpp  pbdim.h  shapeconstr.cpp  shapeconstr.h  trianglemesh.cpp
src/util/: calg.h  config.cpp  config.h  meshutil.h  openglutils.cpp  timemanager.cpp  timemanager.h
src/visual/: scene.h  softmatsview.cpp  softmatsview.h  view.h
